mais um passo, agora imprimindo para n numeros para uma linha so